--- a/index.html
+++ b/index.html
@@ -16,76 +16,90 @@
   <style>
     html, body {
       background-color: hsl(212, 45%, 89%);
+      height: 100%;
+      margin: 0;
       display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
+    }
 
+    main {
+    flex: 1;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
     }
 
     .card {
       background-color: hsl(0, 0%, 100%);
       width: 20em;
       height: 31.18em;
+      margin: 1em 1em 2.5em 1em;
       border-radius: 1.25em;
       box-sizing: border-box;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       box-shadow: rgba(149, 157, 165, 0.2) 0em 0.5em 1.5em 0em;
-
     }
+      
 
     .img {
       width: 18em;
       height: 18em;
       border-radius: 1.25em;
-      margin: 1em;
+      margin-top: 1em;
     }
 
-    .container {
+    .text {
       font-family: Outfit, sans-serif;
-      color: hsl(218, 44%, 22%)
+      padding: 1em;
     }
 
     h1 {
+      color: hsl(218, 44%, 22%);
       font-weight: bold;
       font-size: 1.37em;
-      line-height: 120%;
-      margin-top:1.5em;
+      line-height: 120%;      
     }
 
     p {
+      color: hsl(216, 15%, 48%);
       font-size: 0.9em;
       line-height: 1.25em;
       letter-spacing: 0.01em;
+      padding: 0 1em;
+      margin-bottom: 2.5em;
     }
 
     .attribution { 
-      font-size: 11px; 
+      font-size: 0.7em; 
       text-align: center;
-      position: absolute;
-      bottom: 6em;
-      
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 0.01em;      
     }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { 
+    color: hsl(228, 45%, 44%); 
+  }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <img class="img" src="images/image-qr-code.png"/>
-    <div class="container">
-  <h1>Improve your front-end skills by building projects</h1>
+<main>
+  <div class="card" role="main">
+    <img class="img" src="images/image-qr-code.png" alt="QR Code"/>
+    <div class="text">
+      <h1>Improve your front-end skills by building projects</h1>
 
-  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-</div>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
+</main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/eros77sc" target="_blank">Eros Castro</a>.
-  </div>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/eros77sc" target="_blank">Eros Castro</a>.</p>
+  </footer>
 </body>
 </html>
