--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
 <main>
-  <div class="card" role="main">
+  <div class="card">
     <img class="img" src="images/image-qr-code.png" alt="QR Code"/>
     <div class="text">
       <h1>Improve your front-end skills by building projects</h1>
